<resources>
    <string name="app_name"></string>
    <string name="hyoutei">評定平均計算アプリ</string>
    <string name="st">始める</string>
    <string name="huse">使い方</string>
    <string name="set">設定</string>
    <string name="na">build by Nakamura・Nakata</string>
    <string name="title_activity_main2"></string>
    <string name="gakunen">学年を選択</string>
    <string name="next">次へ</string>
    <string name="ret">タイトルに戻る</string>
    <string name="title_activity_main3"></string>
    <string name="title_activity_main4"></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main5">Main5Activity</string>
    <string name="title_activity_main7">Main7Activity</string>
    <string name="title_activity_main8">Main8Activity</string>
</resources>
